Correction de la taille de police pour version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,12 @@ main {
   transition: outline .1s;
 }
 
+@media (max-width: 500px) {
+  .board li {
+    font-size: var(--square-font-size-sm);
+  }
+}
+
 @media (max-width: 650px) {
   :root {
     --board-width-min: 80vw;
